--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ button {
     display: block;
     margin: 10vh auto;
     background: none;
-    color: #ff477e;
+    color: #5347ff;
     border: 2px solid;
     padding: 1em 2em;
     font-size: 1.7em;
